--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                     <h3>Hi i'm </h3>
                     <h2> Mary Hardy</h2>
                     <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                    <button class="primary-button">Download Now</button>
+                    <button class="primary-button">Contact</button>
                 </div>
                 <div class="profile-picture">
                     <img src="images/hardy.png" alt="">
@@ -38,8 +40,35 @@
 
     </header>
 
-    <main>
-
+    <main class="wrapper">
+        <section>
+            <div class="about">
+                <div class="section-title">
+                    <h2>About Me</h2>
+                </div>
+                <div class="content">
+                    <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                    <div class="contact-info">
+                        <div class="contact-section">
+                            <span>Name</span>
+                            <span>Mary Hardy</span>
+                        </div>
+                        <div class="contact-section">
+                            <span class="gray-primary">Email :</span>
+                            <span>info@gmail.com</span>
+                        </div>
+                        <div class="contact-section">
+                            <span class="gray-primary">Date of birth :</span>
+                            <span>11 November 1987</span>
+                        </div>
+                        <div class="contact-section">
+                            <span class="gray-primary">From:</span>
+                            <span>Los Angeles, USA</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
